# mala

./: .buildinfo  .bumpversion.cfg  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTE.html  Copyright.txt  Dockerfile  LICENSE  README.md  README.rst  about.html  advanced_usage.html  basic_usage.html  citing.html  gcn_layer.py  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  transfer_data.sh  usage.html
_modules/: index.html
_sources/: CONTRIBUTE.md.txt  about.rst.txt  index.md.txt
about/: background.html  overview.html  publications.html
ados/: DFT_calculators.py  calculate_ADOS.py  common.py  dataset.py  fp_spherical.py  model.py  parallel_ados.py  test.py  train.py
advanced_usage/: descriptors.html  hyperparameters.html  openpmd.html  predictions.html  trainingmodel.html
api/: mala.common.check_modules.html  mala.common.html  mala.common.json_serializable.html  mala.common.parallelizer.html  mala.common.parameters.html  mala.common.physical_data.html  mala.datageneration.html  mala.datageneration.ofdft_initializer.html  mala.datageneration.trajectory_analyzer.html  mala.datahandling.data_converter.html  mala.datahandling.data_handler.html  mala.datahandling.data_handler_base.html  mala.datahandling.data_repo.html  mala.datahandling.data_scaler.html  mala.datahandling.data_shuffler.html  mala.datahandling.fast_tensor_dataset.html  mala.datahandling.html  mala.datahandling.ldos_aligner.html  (+61 more)
(+1019 files in other folders)
